--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtg-league-site",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -16,7 +16,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
+    "autoprefixer": "^10.4.24",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.3.1"
   }
 }
