--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4"
   },
@@ -19,7 +20,7 @@
     "autoprefixer": "^10.4.24",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.19",
     "vite": "^7.3.1"
   }
 }
